k8s/argocd/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
spec:
  parentRefs:
    - name: private-gateway
      namespace: default
      sectionName: argocd-https
  hostnames:
    - argocd.internal.rayq.app
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
      - name: argocd-server
        port: 80
